<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/app_background"
    tools:context=".AccountManagement.RegisterActivity">


    <ImageView
        android:id="@+id/image_icon3"
        android:layout_width="283dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hobby_zoo_app" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoIV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:src="@drawable/ic_add_a_photo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pseudoTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photoIV"
        android:layout_marginTop="7dp"
        android:padding="10dp">


        <EditText
            android:id="@+id/pseudoET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pseudoTIL"
        android:layout_marginTop="3dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailTIL"
        android:layout_marginTop="1dp"
        android:padding="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordTIL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/have_accountTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_btn"
        android:layout_marginTop="32dp"
        android:text="@string/already_have_account_login"
        android:textAlignment="center"
        android:textColor="@color/black" />

</RelativeLayout>