<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".CalendarEvolution.MyEvolutionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/backButtonMyEvolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/evolutionActivityTitle"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/evolutionActivityTitle"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrowback"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/evolutionActivityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/my_evolution"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <Spinner
            android:id="@+id/evolutionActivityChooseActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/evolutionActivityTitle"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/evolutionActivityChooseActivity"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/green_btn"
                    android:onClick="previousMonthAction"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_arrow_left"
                    tools:targetApi="lollipop"
                    app:tint="@color/green_btn"
                    tools:ignore="UsingOnClickInXml" />

                <TextView
                    android:id="@+id/monthYearTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="2.5"
                    android:clickable="false"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="Feb 2021"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="HardcodedText" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:backgroundTint="@color/green_btn"
                    android:onClick="nextMonthAction"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_arrow_right"
                    tools:targetApi="lollipop"
                    tools:ignore="UsingOnClickInXml"
                    app:tint="@color/green_btn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/sun"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/mon"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/tue"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/wed"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/thur"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/fri"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/alegreya_sans_sc"
                    android:text="@string/sat"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />


            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendarRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <ImageButton
            android:id="@+id/home_button"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="#00FFFFFF"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_home"
            app:tint="@color/green_btn"/>

        <ImageButton
            android:id="@+id/current_month"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="35dp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_calendar_arrow"
            app:tint="@color/green_btn" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>